--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,12 @@
 
     <groupId>komo.fraczek</groupId>
     <artifactId>servicemodule</artifactId>
-    <version>1.0-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <postgres.version>42.2.5</postgres.version>
+        <!--<pg-embedded.version>0.7.1</pg-embedded.version>-->
+    </properties>
 
     <dependencies>
         <dependency>
@@ -26,9 +30,30 @@
             <version>2.1.1.RELEASE</version>
             <scope>test</scope>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgres.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
-
-
 </project>
