--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
-
 logging.level.komo.fraczek=trace
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/electronicsdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/electronicsdb
 spring.datasource.username=greuser
 spring.datasource.password=gre123
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.initialization-mode=always
 
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
