--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/electronicsdb
 spring.datasource.username=greuser
 spring.datasource.password=gre123
 
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
+
 spring.security.user.name=user
 spring.security.user.password=password
 
@@ -14,7 +14,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
-
-#spring.main.allow-bean-definition-overriding=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
