--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
 jdk: oraclejdk8
 maven: 3.5.2
+
+env:
+- repo_token=xtdz7ze3IZUBiaqTBUwKorDCODJQVFQGQ
+
+after_success:
+- mvn clean test jacoco:report coveralls:report
