Test Coverage badge

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
                 <configuration>
-                    <repoToken>${env.repo_token}</repoToken>
+                    <repoToken>${repo_token}</repoToken>
                 </configuration>
             </plugin>
             <plugin>
